--- a/my-app/src/job/job.css
+++ b/my-app/src/job/job.css
@@ -3,3 +3,28 @@
   flex-direction: column;
   align-items: center;
 }
+
+.Job-spacer {
+  min-height: 50px;
+  display: flex;
+}
+
+.Job-connector {
+  min-height: 50px;
+  background-image: linear-gradient(#000, #000);
+  background-size: 2px 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  flex: 1;
+}
+
+.Job-emptySpace {
+  flex: 2;
+}
+
+.Job .Job-skillGrid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-left: 5%;
+  margin-right: 5%;
+}
