--- a/my-app/src/job/job.css
+++ b/my-app/src/job/job.css
@@ -5,12 +5,11 @@
 }
 
 .Job-spacer {
-  min-height: 50px;
-  display: flex;
+  min-height: 4vh;
 }
 
 .Job-connector {
-  min-height: 50px;
+  min-height: 4vh;
   background-image: linear-gradient(#000, #000);
   background-size: 2px 100%;
   background-repeat: no-repeat;
@@ -18,13 +17,11 @@
   flex: 1;
 }
 
-.Job-emptySpace {
-  flex: 2;
-}
-
 .Job .Job-skillGrid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  margin-left: 5%;
-  margin-right: 5%;
+  width: 90vw;
+  margin-left: 5vw;
+  margin-right: 5vw;
+  margin-bottom: 5vh;
 }
