--- a/my-app/src/skill/Skill.css
+++ b/my-app/src/skill/Skill.css
@@ -1,14 +1,14 @@
 .Skill {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
   text-align: center;
   flex: 1;
 }
 
 .Skill-icon {
-  width: 50px;
-  height: 50px;
+  width: 15vw;
+  height: 15vw;
   text-overflow: clip;
   overflow: hidden;
   outline: solid 1px black;
@@ -19,27 +19,34 @@
   flex-direction:column;
   margin-left:5%;
   margin-right:5%;
-  text-align: left;
+  text-align: center;
   flex: 1;
 }
 
 .Skill-name {
-  font-size: 12px;
+  font-size: calc(8px + 2vmin);
+  margin-top: 1vw;
+  margin-bottom: 1vw;
   flex:2;
 }
 
 .Skill-value {
+  font-size: calc(8px + 2vmin);
   text-align: center;
-  padding-left: 4px;
-  padding-right: 4px;
-  flex: 1;
+  padding-left: 2vw;
+  padding-right: 2vw;
 }
 
 .Skill-modifiers {
   display: flex;
-  flex:1
+  justify-content: center;
+  align-items:center;
+  flex:1;
 }
 
 .Skill-modifiers button {
-  flex: 1;
+  font-size: calc(8px + 2vmin);
+  font-weight: bold;
+  width: calc(8px + 4vmin);
+  height: calc(8px + 4vmin);
 }
