--- a/my-app/src/skill/Skill.css
+++ b/my-app/src/skill/Skill.css
@@ -3,14 +3,6 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  flex: 1;
-}
-
-.Skill-icon {
-  max-width: 100px;
-  aspect-ratio: 1;
-  text-overflow: clip;
-  overflow: hidden;
 }
 
 .Skill-details {
@@ -30,7 +22,7 @@
   text-align: center;
   width: 15vmin;
   max-width: 100px;
-  flex:2;
+  flex: 1;
 }
 
 .Skill-value {
@@ -45,7 +37,6 @@
   display: flex;
   justify-content: center;
   align-items:center;
-  flex:1;
 }
 
 .Skill-modifiers .Skill-button {
@@ -64,4 +55,20 @@
 .Skill-button.Skill-buttonDisabled {
   background-color: lightgrey;
   cursor: unset;
+}
+
+.Skill-spacer {
+  min-height: 4vh;
+  width: 100%;
+}
+
+.Skill-connector {
+  min-height: 4vh;
+  width: 100%;
+  background-image: linear-gradient(#000, #000);
+  background-size: 2px 100%;
+  background-repeat: no-repeat;
+  background-position: center center;
+  text-align: right;
+  padding-right: 6vmin;
 }
